fix: change z-index load img

--- a/styles/style.css
+++ b/styles/style.css
@@ -292,7 +292,7 @@ option {
 
 .load-create {
   width: 100px;
-  z-index: 1000;
+  z-index: 1400;
   position: fixed;
   top: 50%;
   left: 50%;
